change background color

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <title>Hello, world!</title>
 
     <style>
-
+body {
+  background-color: #2B1700;
+}
     </style>
   </head>
   <body>
+    
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
@@ -89,19 +92,6 @@
     </div>
   </div>
 </div>
-
-<div class="container-xl p-4 my-4 border">
-  <div class="row">
-    <div class="col-md border">
-    </div>
-    <div class="col-md border">
-    </div>
-    <div class="col-md border">
-    </div>
-  </div>
-</div>
-
-
 
   </body>
 </html>
