--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@ body {
     </style>
   </head>
   <body>
-    
-    <h1>Hello, world!</h1>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -30,15 +27,10 @@ body {
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 <div class="container-xl p-4 my-4 border">
+  <h1 style="color:white;">S.H.A.B.R</h1>
+  <p style="color:white;">Skydance Hot Air Balloon Rides</p>
   <div class="row">
-    <div class="col-sm border">
-      One of three columns
-    </div>
-    <div class="col-sm border">
-      One of three columns
-    </div>
-    <div class="col-sm border">
-      One of three columns
+    <div class="col-xl border">
     </div>
   </div>
 </div>
