fix picture error

--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@ body {
 
 <div class="container-xl p-4 my-4 border">
   <div class="row">
-    <div class="col-sm border">
-      One of three columns
-    </div>
-    <div class="col-sm border">
-      One of three columns
-    </div>
-    <div class="col-sm border">
-      One of three columns
-    </div>
+    <p class="text-left" style="color:white;"> Ride with the wind</p>
+     <img class="img-fluid" src="~/shabr/img/balloon-1.jpg" alt="a" width="460" height="345"> 
+     <img class="img-fluid" src="~/shabr/img/balloon-2.jpg" alt="b" width="460" height="345"> 
+     <img class="img-fluid" src="~/shabr/img/balloon-3.jpg" alt="c" width="460" height="345"> 
+     <img class="img-fluid" src="~/shabr/img/balloon-4.jpg" alt="d" width="460" height="345"> 
+     <img class="img-fluid" src="~/shabr/img/balloon-5.jpg" alt="e" width="460" height="345"> 
+     <img class="img-fluid" src="~/shabr/img/balloon-6.jpg" alt="f" width="460" height="345"> 
+    <p class="text-right" style="color:white;">Dance with the sky</p>
   </div>
 </div>
 
