--- a/index.html
+++ b/index.html
@@ -26,6 +26,54 @@ body {
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+ <div id="carousel" class="carousel slide" data-ride= "carousel">
+   <div class="carousel-inner" role ="listbox">
+     <div class="carousel-item active">
+       <img class="d-block w-100" src="img/balloon-1.jpg" alt="first pic">
+       <div class="carousel-caption">
+         <h3>SHABR</h3>
+         <p>Dance with the wind</p>
+       </div> 
+     </div>
+     <div class="carousel-item">
+       <img class="d-block w-100" src="img/balloon-1.jpg" alt="second pic">
+       <div class="carousel-caption">
+         <h3>SHABR</h3>
+         <p>Dance with the wind</p>
+       </div>
+     </div>
+     <div class="carousel-item">
+       <img class="d-block w-100" src="img/balloon-1.jpg" alt="third pic">
+       <div class="carousel-caption">
+         <h3>SHABR</h3>
+         <p>Dance with the wind</p>
+       </div>
+     </div>
+     <div class="carousel-item">
+       <img class="d-block w-100" src="img/balloon-1.jpg" alt="fourth pic">
+       <div class="carousel-caption">
+         <h3>SHABR</h3>
+         <p>Dance with the wind</p>
+       </div>
+     </div>
+     <div class="carousel-item">
+       <img class="d-block w-100" src="img/balloon-1.jpg" alt="fifth pic">
+       <div class="carousel-caption">
+         <h3>SHABR</h3> 
+         <p>Dance with the wind</p>
+       </div>
+     </div>
+     <div class="carousel-item">
+       <img class="d-block w-100" src="img/balloon-1.jpg" alt="sixth pic">
+       <div class="carousel-caption">
+         <h3>SHABR</h3>
+         <p>Dance with the wind</p>
+       </div>
+     </div>
+     
+   </div>
+ </div>
+ 
 <div class="container-xl p-4 my-4 border">
   <h1 style="color:white;">S.H.A.B.R</h1>
   <p style="color:white;">Skydance Hot Air Balloon Rides</p>
@@ -51,7 +99,7 @@ body {
     <p class="text-left" style="color:white;"> Ride with the wind</p>
      <img class="img-fluid" src="~/shabr/img/balloon-1.jpg" alt="a" width="460" height="345"> 
      <img class="img-fluid" src="~/shabr/img/balloon-2.jpg" alt="b" width="460" height="345"> 
-     <img class="img-fluid" src="~/shabr/img/balloon-3.jpg" alt="c" width="460" height="345"> 
+     <img class="img-fluid" src="../img/balloon-3.jpg" alt="c" width="460" height="345"> 
      <img class="img-fluid" src="~/shabr/img/balloon-4.jpg" alt="d" width="460" height="345"> 
      <img class="img-fluid" src="~/shabr/img/balloon-5.jpg" alt="e" width="460" height="345"> 
      <img class="img-fluid" src="~/shabr/img/balloon-6.jpg" alt="f" width="460" height="345"> 
@@ -72,6 +120,7 @@ body {
 
 <div class="container-xl p-4 my-4 border">
   <div class="row">
+    <p> Information</p>
     <div class="col-sm border">
       One of three columns
     </div>
