--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@ body {
          <p>Dance with the wind</p>
        </div>
      </div>
-     
+     <a class= "carousel-control-prev" href="#carousel" role="button" data-slide="prev"
+      <span class="carousel-control-prev-icon"></span>
+      <span class="sr-only">Previous</span>
+     </a>
+     <a class= "carousel-control-next" href="#carousel" role="button" data-slide="next"
+      <span class="carousel-control-next-icon"></span>
+      <span class="sr-only">Next</span>
+     </a>
    </div>
  </div>
  
