add carousel indicators

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@ body {
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
  <div id="carousel" class="carousel slide" data-ride= "carousel">
+   <ol class="carousel indicators">
+     <li data-target="#carousel" data-slide-to="0" class="active"></li>
+     <li data-target="#carousel" data-slide-to="1"></li>
+     <li data-target="#carousel" data-slide-to="2"></li>
+     <li data-target="#carousel" data-slide-to="3"></li>
+     <li data-target="#carousel" data-slide-to="4"></li>
+   </ol>
    <div class="carousel-inner" role ="listbox">
      <div class="carousel-item active">
        <img class="d-block w-100" src="img/balloon-1.jpg" alt="first pic">
