--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@ body {
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
- <div id="carousel" class="carousel slide" data-ride= "carousel">
+<div class="container-xl p-4 my-4 border">
+  <h1 style="color:white;">S.H.A.B.R</h1>
+  <p style="color:white;">Skydance Hot Air Balloon Rides</p>
+  <div class="row">
+    <div class="col-xl-border">
+    </div>
+  </div>
+</div>
+
+<div class="container-xl p-4 my-4 border">
+  <div class="row">
+    <div class="col-xl border">
+     <div id="carousel" class="carousel slide" data-ride= "carousel">
    <ol class="carousel indicators">
      <li data-target="#carousel" data-slide-to="0" class="active"></li>
      <li data-target="#carousel" data-slide-to="1"></li>
@@ -43,35 +55,35 @@ body {
        </div> 
      </div>
      <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-1.jpg" alt="second pic">
+       <img class="d-block w-100" src="img/balloon-2.jpg" alt="second pic">
        <div class="carousel-caption">
          <h3>SHABR</h3>
          <p>Dance with the wind</p>
        </div>
      </div>
      <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-1.jpg" alt="third pic">
+       <img class="d-block w-100" src="img/balloon-3.jpg" alt="third pic">
        <div class="carousel-caption">
          <h3>SHABR</h3>
          <p>Dance with the wind</p>
        </div>
      </div>
      <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-1.jpg" alt="fourth pic">
+       <img class="d-block w-100" src="img/balloon-4.jpg" alt="fourth pic">
        <div class="carousel-caption">
          <h3>SHABR</h3>
          <p>Dance with the wind</p>
        </div>
      </div>
      <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-1.jpg" alt="fifth pic">
+       <img class="d-block w-100" src="img/balloon-5.jpg" alt="fifth pic">
        <div class="carousel-caption">
          <h3>SHABR</h3> 
          <p>Dance with the wind</p>
        </div>
      </div>
      <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-1.jpg" alt="sixth pic">
+       <img class="d-block w-100" src="img/balloon-6.jpg" alt="sixth pic">
        <div class="carousel-caption">
          <h3>SHABR</h3>
          <p>Dance with the wind</p>
@@ -87,12 +99,6 @@ body {
      </a>
    </div>
  </div>
- 
-<div class="container-xl p-4 my-4 border">
-  <h1 style="color:white;">S.H.A.B.R</h1>
-  <p style="color:white;">Skydance Hot Air Balloon Rides</p>
-  <div class="row">
-    <div class="col-xl border">
     </div>
   </div>
 </div>
@@ -111,13 +117,71 @@ body {
 <div class="container-xl p-4 my-4 border">
   <div class="row">
     <p class="text-left" style="color:white;"> Ride with the wind</p>
-     <img class="img-fluid" src="~/shabr/img/balloon-1.jpg" alt="a" width="460" height="345"> 
-     <img class="img-fluid" src="~/shabr/img/balloon-2.jpg" alt="b" width="460" height="345"> 
-     <img class="img-fluid" src="../img/balloon-3.jpg" alt="c" width="460" height="345"> 
-     <img class="img-fluid" src="~/shabr/img/balloon-4.jpg" alt="d" width="460" height="345"> 
-     <img class="img-fluid" src="~/shabr/img/balloon-5.jpg" alt="e" width="460" height="345"> 
-     <img class="img-fluid" src="~/shabr/img/balloon-6.jpg" alt="f" width="460" height="345"> 
+     <!--<img class="img-fluid" src="img/balloon-1.jpg" alt="a" width="460" height="345"> -->
+     <!--<img class="img-fluid" src="img/balloon-2.jpg" alt="b" width="460" height="345"> -->
+     <!--<img class="img-fluid" src="img/balloon-3.jpg" alt="c" width="460" height="345"> -->
+     <!--<img class="img-fluid" src="img/balloon-4.jpg" alt="d" width="460" height="345"> -->
+     <!--<img class="img-fluid" src="img/balloon-5.jpg" alt="e" width="10" height="10"> -->
+     <!--<img class="img-fluid" src="img/balloon-6.jpg" alt="f" width="460" height="345"> -->
     <p class="text-right" style="color:white;">Dance with the sky</p>
+   <div class="container">
+  <h2>Info: All the information you'll need</h2>
+  <p>Fun for everyone</p>
+  <p>Come make a new memory with us. There's nothing else like it.</p>
+  <p>Fun for both adults and kids.<strong>All are welcome!</strong></p>
+  <p>Afraid of heights? You won't be after you slow-dance with the sky.</p>
+  <div id="accordion">
+    <div class="card">
+      <div class="card-header">
+        <a class="card-link" data-toggle="collapse" href="#collapseOne">
+          Time
+        </a>
+      </div>
+      <div id="collapseOne" class="collapse show" data-parent="#accordion">
+        <div class="card-body">
+          Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call ahead for the exact meeting time.
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+        Weather
+      </a>
+      </div>
+      <div id="collapseTwo" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+          High winds and/or inclement weather prevent us from flying. We ask all our guests to contact us in the early afternoon prior to their scheduled flight between 12:00 noon and 2:00 p.m. to verify that the forecasted weather conditions will allow their balloon flight.
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+          Flight
+        </a>
+      </div>
+      <div id="collapseThree" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+          Our actual flight time is approximately one to one and a half hours averaging closer to one and a half hours and we suggest to allow three to three and a half hours for the entire adventure.
+        </div>
+      </div>
+    </div>
+        <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+          Participation
+        </a>
+      </div>
+      <div id="collapseThree" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+          We encourage all of our guests, if they wish, to participate in both the inflation and deflation of the balloon. We have found it adds greatly to the fun of the entire ballooning experience.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+    
   </div>
 </div>
 
@@ -145,7 +209,7 @@ body {
       One of three columns
     </div>
   </div>
-</div>
+ </div>
 
   </body>
 </html>
