--- a/index.html
+++ b/index.html
@@ -198,16 +198,44 @@ body {
 
 <div class="container-xl p-4 my-4 border">
   <div class="row">
-    <p> Information</p>
-    <div class="col-sm border">
-      One of three columns
+   <div class="container">
+  <h2>Testomonials</h2>
+  <p>Just a few of our happy customers</p>
+  <p><strong>Note:</strong> The cards are displayed vertically on small screens (less than 576px):</p>
+  <div class="card-columns">
+    <div class="card bg-primary">
+      <div class="card-body text-center">
+        <p class="card-text">"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
+      </div>
     </div>
-    <div class="col-sm border">
-      One of three columns
+    <div class="card bg-warning">
+      <div class="card-body text-center">
+        <p class="card-text">"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
+      </div>
     </div>
-    <div class="col-sm border">
-      One of three columns
+    <div class="card bg-success">
+      <div class="card-body text-center">
+        <p class="card-text">"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
+      </div>
     </div>
+    <div class="card bg-danger">
+      <div class="card-body text-center">
+        <p class="card-text">"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
+      </div>
+    </div>  
+    <div class="card bg-light">
+      <div class="card-body text-center">
+        <p class="card-text">"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
+      </div>
+    </div>
+    <div class="card bg-info">
+      <div class="card-body text-center">
+        <p class="card-text">"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
   </div>
  </div>
 
