--- a/index.html
+++ b/index.html
@@ -26,11 +26,39 @@ body {
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+
 <div class="container-xl p-4 my-4 border">
-  <h1 style="color:white;">S.H.A.B.R</h1>
-  <p style="color:white;">Skydance Hot Air Balloon Rides</p>
   <div class="row">
+    <div class="col-md border">
+    </div>
+    <div class="col-md border">
+    </div>
+    <div class="col-md border">
+    </div>
+  </div>
+</div>
+
+<div class="container-xl p-4 my-4 border">
+  <div class="jumbotron">
+   <div class="row">
     <div class="col-xl-border">
+    <h1 style="color:white;">Home</h1>   
+    <p style="color:white;">Fun for everyone</p>
+    <p>Come make a new memory with us. There's nothing else like it.
+Fun for both adults and kids. All are welcome!
+Afraid of heights? You won't be after you slow-dance with the sky.</p>      
+    </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-xl p-4 my-4 border">
+  <div class="row">
+    <div class="col-md border">
+    </div>
+    <div class="col-md border">
+    </div>
+    <div class="col-md border">
     </div>
   </div>
 </div>
@@ -235,9 +263,31 @@ body {
     </div>
   </div>
 </div>
-
   </div>
  </div>
 
+<div class="container-xl p-4 my-4 border">
+  <div class="row">
+    <div class="col-md border">
+    </div>
+    <div class="col-md border">
+    </div>
+    <div class="col-md border">
+    </div>
+  </div>
+</div>
+
+<div class="container-xl p-4 my-4 border">
+  <div class="row">
+    <p>Contact: We’d love to hear from you</p>
+    <ul>
+      <li> Address </li>
+<li>SHABR, Inc.</li>
+<li>1234 Shabr Road </li>
+<li>Somewhere, OT 80013</li>
+<li>Phone(555) 555-1234</li>
+    </ul>
+  </div>
+</div>
   </body>
 </html>
