--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Hello, world!</title>
+    <title>SHABR Project</title>
 
     <style>
 body {
   background-color: #2B1700;
+  color:#014421;
 }
     </style>
   </head>
@@ -79,13 +80,13 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
   <div class="row">
     <div class="col-xl border">
      <div id="carousel" class="carousel slide" data-ride= "carousel">
-   <ol class="carousel indicators">
-     <li data-target="#carousel" data-slide-to="0" class="active"></li>
-     <li data-target="#carousel" data-slide-to="1"></li>
-     <li data-target="#carousel" data-slide-to="2"></li>
-     <li data-target="#carousel" data-slide-to="3"></li>
-     <li data-target="#carousel" data-slide-to="4"></li>
-   </ol>
+   <!--<ol class="carousel indicators">-->
+   <!--  <li data-target="#carousel" data-slide-to="0" class="active"></li>-->
+   <!--  <li data-target="#carousel" data-slide-to="1"></li>-->
+   <!--  <li data-target="#carousel" data-slide-to="2"></li>-->
+   <!--  <li data-target="#carousel" data-slide-to="3"></li>-->
+   <!--  <li data-target="#carousel" data-slide-to="4"></li>-->
+   <!--</ol>-->
    <div class="carousel-inner" role ="listbox">
      <div class="carousel-item active">
        <img class="d-block w-100" src="img/balloon-1.jpg" alt="first pic">
@@ -156,14 +157,12 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
 <div class="container-xl p-4 my-4 border">
   <div class="row">
-    <p class="text-left" style="color:white;"> Ride with the wind</p>
      <!--<img class="img-fluid" src="img/balloon-1.jpg" alt="a" width="460" height="345"> -->
      <!--<img class="img-fluid" src="img/balloon-2.jpg" alt="b" width="460" height="345"> -->
      <!--<img class="img-fluid" src="img/balloon-3.jpg" alt="c" width="460" height="345"> -->
      <!--<img class="img-fluid" src="img/balloon-4.jpg" alt="d" width="460" height="345"> -->
      <!--<img class="img-fluid" src="img/balloon-5.jpg" alt="e" width="10" height="10"> -->
      <!--<img class="img-fluid" src="img/balloon-6.jpg" alt="f" width="460" height="345"> -->
-    <p class="text-right" style="color:white;">Dance with the sky</p>
    <div class="container">
   <h2>Info: All the information you'll need</h2>
   <p>Fun for everyone</p>
