--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ body {
   <div class="jumbotron">
    <div class="row">
     <div class="col-xl-border">
-    <h1 style="color:white;">Home</h1>   
-    <p style="color:white;">Fun for everyone</p>
+    <h1>Home</h1>   
+    <p>Fun for everyone</p>
     <p>Come make a new memory with us. There's nothing else like it.
 Fun for both adults and kids. All are welcome!
 Afraid of heights? You won't be after you slow-dance with the sky.</p>      
@@ -290,15 +290,16 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
 <div class="container-xl p-4 my-4 border">
   <div class="row">
-    <p>Contact: We’d love to hear from you</p>
-    <ul>
-      <li> Address </li>
-<li>SHABR, Inc.</li>
-<li>1234 Shabr Road </li>
-<li>Somewhere, OT 80013</li>
-<li>Phone(555) 555-1234</li>
-    </ul>
+    <h6>Contact: We’d love to hear from you</h6>
+    <h6>Address</h6>
+    <h6>SHABR, Inc.</h6>
+    <h6>1234 Shabr Road </h6>
+    <h6>Somewhere, OT 80013</h6>
+    <h6>Phone(555) 555-1234</h6>
   </div>
 </div>
+
+      <p class="text-center">Copyright © 2016   |   SHABR</p>
+
   </body>
 </html>
