--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ body {
   <div class="jumbotron">
    <div class="row">
     <div class="col-xl-border">
-    <h1>Home</h1>   
+    <h1>Home</h1>
     <p>Fun for everyone</p>
     <p>Come make a new memory with us. There's nothing else like it.
 Fun for both adults and kids. All are welcome!
-Afraid of heights? You won't be after you slow-dance with the sky.</p>      
+Afraid of heights? You won't be after you slow-dance with the sky.</p>
     </div>
     </div>
   </div>
@@ -93,7 +93,7 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
        <div class="carousel-caption">
          <h3>SHABR</h3>
          <p>Dance with the wind</p>
-       </div> 
+       </div>
      </div>
      <div class="carousel-item">
        <img class="d-block w-100" src="img/balloon-2.jpg" alt="second pic">
@@ -119,7 +119,7 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
      <div class="carousel-item">
        <img class="d-block w-100" src="img/balloon-5.jpg" alt="fifth pic">
        <div class="carousel-caption">
-         <h3>SHABR</h3> 
+         <h3>SHABR</h3>
          <p>Dance with the wind</p>
        </div>
      </div>
@@ -220,7 +220,7 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
     </div>
   </div>
 </div>
-    
+
   </div>
 </div>
 
@@ -240,7 +240,6 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
    <div class="container">
   <h2>Testomonials</h2>
   <p>Just a few of our happy customers</p>
-  <p><strong>Note:</strong> The cards are displayed vertically on small screens (less than 576px):</p>
   <div class="card-columns">
     <div class="card bg-primary">
       <div class="card-body text-center">
@@ -261,7 +260,7 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
       <div class="card-body text-center">
         <p class="card-text">"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
       </div>
-    </div>  
+    </div>
     <div class="card bg-light">
       <div class="card-body text-center">
         <p class="card-text">"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
@@ -290,12 +289,34 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
 <div class="container-xl p-4 my-4 border">
   <div class="row">
-    <h6>Contact: We’d love to hear from you</h6>
-    <h6>Address</h6>
-    <h6>SHABR, Inc.</h6>
-    <h6>1234 Shabr Road </h6>
-    <h6>Somewhere, OT 80013</h6>
-    <h6>Phone(555) 555-1234</h6>
+    <div class="container">
+  <h2>Contact</h2>
+  <p>We'd love to hear from you</p>
+  <p class="text-center"><strong>Address</strong></p>
+  <div class="card-deck">
+    <div class="card bg-primary">
+      <div class="card-body text-center">
+        <p class="card-text">SHABR, Inc.</p>
+      </div>
+    </div>
+    <div class="card bg-warning">
+      <div class="card-body text-center">
+        <p class="card-text">1234 Shabr Road</p>
+      </div>
+    </div>
+    <div class="card bg-success">
+      <div class="card-body text-center">
+        <p class="card-text">Somewhere, OT 80013</p>
+      </div>
+    </div>
+    <div class="card bg-danger">
+      <div class="card-body text-center">
+        <p class="card-text">Phone: (555) 555-1234</p>
+      </div>
+    </div>  
+  </div>
+</div>
+
   </div>
 </div>
 
