--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <title>SHABR Project</title>
 
     <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+    
 body {
   background-color: #2B1700;
   color:#014421;
+  font-family: 'Poiret One', cursive;
 }
     </style>
   </head>
