--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ body {
   background-color: #2B1700;
   color:#014421;
   font-family: 'Poiret One', cursive;
+  font-weight:bold;
 }
     </style>
   </head>
