--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
-    
+@media screen and (min-width: 0px){
 body {
   background-color: #2B1700;
   color:#014421;
   font-family: 'Poiret One', cursive;
   font-weight:bold;
 }
+}
+
     </style>
   </head>
   <body>
