add all raw text missing

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ body {
   <div class="jumbotron">
    <div class="row">
     <div class="col-xl-border">
-    <h1>Home</h1>
-    <p>Fun for everyone</p>
+    <h1>Home:</h1>
+    <p>Fun for Everyone</p>
     <p>Come make a new memory with us. There's nothing else like it.
 Fun for both adults and kids. All are welcome!
 Afraid of heights? You won't be after you slow-dance with the sky.</p>
@@ -207,11 +207,8 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
      <!--<img class="img-fluid" src="img/balloon-5.jpg" alt="e" width="10" height="10"> -->
      <!--<img class="img-fluid" src="img/balloon-6.jpg" alt="f" width="460" height="345"> -->
    <div class="container">
-  <h2>Info: All the information you'll need</h2>
-  <p>Fun for everyone</p>
-  <p>Come make a new memory with us. There's nothing else like it.</p>
-  <p>Fun for both adults and kids.<strong>All are welcome!</strong></p>
-  <p>Afraid of heights? You won't be after you slow-dance with the sky.</p>
+  <h2>Info:</h2>
+  <p>All the information you'll need</p>
   <div id="accordion">
     <div class="card">
       <div class="card-header">
@@ -281,7 +278,7 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 <div class="container-xl p-4 my-4 border">
   <div class="row">
    <div class="container">
-  <h2>Testomonials</h2>
+  <h2>Testimonials:</h2>
   <p>Just a few of our happy customers</p>
   <div class="card-columns">
     <div class="card bg-primary">
@@ -333,7 +330,7 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 <div class="container-xl p-4 my-4 border">
   <div class="row">
     <div class="container">
-  <h2>Contact</h2>
+  <h2>Contact:</h2>
   <p>We'd love to hear from you</p>
   <p class="text-center"><strong>Address</strong></p>
   <div class="card-deck">
