add bootstrap components used in SHABR

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 </div>
 
       <p class="text-center">Copyright © 2016   |   SHABR</p>
-
+      
+<!--bootstrap components used: accordion,carousel,cards,modal,jumbotron,borders,align text,ect.-->
   </body>
 </html>
