--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ body {
   font-family: 'Poiret One', cursive;
   font-weight:bold;
 }
+.carousel-inner img {
+      width: 100%;
+      height: 100%;
+}
 }
 
     </style>
@@ -120,71 +124,93 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 </div>
 
 <div class="container-xl p-4 my-4 border">
-  <div class="row">
-    <div class="col-xl border">
-     <div id="carousel" class="carousel slide" data-ride= "carousel">
-   <!--<ol class="carousel indicators">-->
-   <!--  <li data-target="#carousel" data-slide-to="0" class="active"></li>-->
-   <!--  <li data-target="#carousel" data-slide-to="1"></li>-->
-   <!--  <li data-target="#carousel" data-slide-to="2"></li>-->
-   <!--  <li data-target="#carousel" data-slide-to="3"></li>-->
-   <!--  <li data-target="#carousel" data-slide-to="4"></li>-->
-   <!--</ol>-->
-   <div class="carousel-inner" role ="listbox">
-     <div class="carousel-item active">
-       <img class="d-block w-100" src="img/balloon-1.jpg" alt="first pic">
-       <div class="carousel-caption">
-         <h3>SHABR</h3>
-         <p>Dance with the wind</p>
-       </div>
-     </div>
-     <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-2.jpg" alt="second pic">
-       <div class="carousel-caption">
-         <h3>SHABR</h3>
-         <p>Dance with the wind</p>
-       </div>
-     </div>
-     <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-3.jpg" alt="third pic">
-       <div class="carousel-caption">
-         <h3>SHABR</h3>
-         <p>Dance with the wind</p>
-       </div>
-     </div>
-     <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-4.jpg" alt="fourth pic">
-       <div class="carousel-caption">
-         <h3>SHABR</h3>
-         <p>Dance with the wind</p>
-       </div>
-     </div>
-     <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-5.jpg" alt="fifth pic">
-       <div class="carousel-caption">
-         <h3>SHABR</h3>
-         <p>Dance with the wind</p>
-       </div>
-     </div>
-     <div class="carousel-item">
-       <img class="d-block w-100" src="img/balloon-6.jpg" alt="sixth pic">
-       <div class="carousel-caption">
-         <h3>SHABR</h3>
-         <p>Dance with the wind</p>
-       </div>
-     </div>
-     <a class= "carousel-control-prev" href="#carousel" role="button" data-slide="prev"
-      <span class="carousel-control-prev-icon"></span>
-      <span class="sr-only">Previous</span>
-     </a>
-     <a class= "carousel-control-next" href="#carousel" role="button" data-slide="next"
-      <span class="carousel-control-next-icon"></span>
-      <span class="sr-only">Next</span>
-     </a>
-   </div>
- </div>
+ <div class="row">
+  <div class="col-xl border">
+    <div id="SHABR" class="carousel slide" data-ride="carousel">
+
+  
+  <ul class="carousel-indicators">
+    <li data-target="#SHABR" data-slide-to="0" class="active"></li>
+    <li data-target="#SHABR" data-slide-to="1"></li>
+    <li data-target="#SHABR" data-slide-to="2"></li>
+    <li data-target="#SHABR" data-slide-to="3"></li>
+    <li data-target="#SHABR" data-slide-to="4"></li>
+    <li data-target="#SHABR" data-slide-to="5"></li>
+    <li data-target="#SHABR" data-slide-to="6"></li>
+  </ul>
+  
+  
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="img/hot-air-balloon-clipart.png" alt="first picture">
+      <div class="carousel-caption">
+        <h3>S.H.A.B.R</h3>
+        <p>Ride with the wind</p>
+        <p>Dance with the sky</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/balloon-1.jpg" alt="second picture">
+      <div class="carousel-caption">
+        <h3>S.H.A.B.R</h3>
+        <p>Ride with the wind</p>
+        <p>Dance with the sky</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/balloon-2.jpg" alt="third picture">
+      <div class="carousel-caption">
+        <h3>S.H.A.B.R</h3>
+        <p>Ride with the wind</p>
+        <p>Dance with the sky</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/balloon-3.jpg" alt="fourth picture">
+      <div class="carousel-caption">
+        <h3>S.H.A.B.R</h3>
+        <p>Ride with the wind</p>
+        <P>Dance with the sky</P>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/balloon-4.jpg" alt="fifth picture">
+      <div class="carousel-caption">
+        <h3>S.H.A.B.R</h3>
+        <p>Ride with the wind</p>
+        <P>Dance with the sky</P>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/balloon-5.jpg" alt="sixth picture">
+      <div class="carousel-caption">
+        <h3>S.H.A.B.R</h3>
+        <p>Ride with the wind</p>
+        <P>Dance with the sky</P>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/balloon-6.jpg" alt="seventh picture">
+      <div class="carousel-caption">
+        <h3>S.H.A.B.R</h3>
+        <p>Ride with the wind</p>
+        <P>Dance with the sky</P>
+      </div>
     </div>
   </div>
+  
+  
+  <a class="carousel-control-prev" href="#SHABR" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#SHABR" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
+
+  </div>    
+ </div>      
 </div>
 
 <div class="container-xl p-4 my-4 border">
@@ -200,12 +226,6 @@ Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
 <div class="container-xl p-4 my-4 border">
   <div class="row">
-     <!--<img class="img-fluid" src="img/balloon-1.jpg" alt="a" width="460" height="345"> -->
-     <!--<img class="img-fluid" src="img/balloon-2.jpg" alt="b" width="460" height="345"> -->
-     <!--<img class="img-fluid" src="img/balloon-3.jpg" alt="c" width="460" height="345"> -->
-     <!--<img class="img-fluid" src="img/balloon-4.jpg" alt="d" width="460" height="345"> -->
-     <!--<img class="img-fluid" src="img/balloon-5.jpg" alt="e" width="10" height="10"> -->
-     <!--<img class="img-fluid" src="img/balloon-6.jpg" alt="f" width="460" height="345"> -->
    <div class="container">
   <h2>Info:</h2>
   <p>All the information you'll need</p>
